--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.3",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-
-    "build": "INLINE_RUNTIME_CHUNK=false craco build",
-
+    "build": "set INLINE_RUNTIME_CHUNK=false&&craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.194"
+    "@types/chrome": "^0.0.194",
+    "dotenv-cli": "^6.0.0"
   }
 }
