--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,9 +2,7 @@
   "short_name": "React App",
   "name": "Chrome React SEO Extension",
   "default_icon": "logo512.png",
-  "permissions": [
-    "activeTab"
- ],
+
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
@@ -16,10 +14,17 @@
       "default_popup": "index.html",
       "default_title": "Open the popup"
   },
+  "permissions": [
+    "activeTab"
+ ],
   "content_scripts": [
     {
         "matches": ["http://*/*", "https://*/*"],
-        "js": ["./static/js/content.js"]
+        "js": ["./static/js/content.js"],
+        "all_frames": false,
+        "run_at": "document_end"
+
     }
  ]
+
 }
